2016-06-01  SilverNexus
	* parseArgs.c: Add arguments -b and --binary to toggle searching binary
	  files.
	* settings.h: Define search flag for binary files.
	* search.c: Add Functionality to test for binary files.
	  Optimize line counting to use memchr() instead of strchr().
	  Conditionally compile mmap file end fix only when we have mmap().
	  Move old check for null termination into new binary file detection;
	  optimize its new placement.
	* README: Updated usage to reflect new binary file search feature.
	* doc/fileperuser.man: Added usage information for new arguments.
	* test/search_test/test_search_results.sh: Added tests for new binary
	  files search option.
	* test/search_test/test_binary_*: Added new test results.
	* main.c: Fixed a bug that prevented the first character of needle from
	  being converted to lowercase on case-insensitive searches.

2016-05-30  SilverNexus
	* fileperuser_search.c: Remove fileperuser_memcasemem_brute().
	  Outperformed even on needle length of 2 by fileperuser_memcasemem_boyer().
	* fileperuser_search.h: Remove prototype for fileperuser_memcasemem_brute().
	* jump_table.h: Adjust minimum threshold for building a jump table on
	  case-insensitive searches down to 1.
	* search.c: Move the declaration of last char* into no_case branch.
	  Remove branch that called fileperuser_memcasemem_brute().
	  Fix an error that caused the length left to increase as a file was
	  searched using the case-sensitive functions."
	* test/performance_test/Makefile: Remove fp_memcasemem_brute targets.
	* test/performance_test/main.c: Remove FP_MEMCASEMEM_BRUTE preprocessor checks
	  and subsequent code sections.
	* test/performance_test/run_test.sh: Remove fp_memcasemem_brute tests.
	* test/performance_test/README: Remove reference to fp_memcasemem_brute.
	* test/performance_test/LICENSES: Add a file describing the contents of the
	  test file and the applicable licenses.
	* test/search_test/LICENSES: Add a file describing the contents of the