@@ -1,3 +1,6 @@
+2016-06-02  SilverNexus
+	* fileperuser_search.c: Reduce the math required to return a value in fileperuser_memmem_boyer().
+
 2016-06-01  SilverNexus
 	* parseArgs.c: Add arguments -b and --binary to toggle searching binary
 	  files.
